<resources>
    <string name="app_name">Diabetic Patient Care App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="registerForm">Register Form</string>
    <string name="loginForm">Login Form</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">Test type</string>
    <string name="spinner_title2">Duration</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="activity_title_home">Notes</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_new_measure">Measure</string>
    <string name="lbl_new_results">Results</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="lbl_edit_measure">Edit Measure</string>
    <string name="lbl_edit_results">Edit Results</string>
    <string name="hint_enter_measure">Enter when you took the measure!</string>

    <string name="app_name1">Alarm Manager Demo</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="edit_text_hint">Input your Alarm time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="label">Select your Alarm input type from below:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
    <!--based on your message history-->
    <!--</string>-->

    <string name="pref_exercise_time">Minimum time you should spend on exercise daily in minutes</string>
    <string name="pref_default_exercise_time">30 minutes</string>

    <string name="pref_blood_test_unit_title">Preferred blood test unit</string>
    <string-array name="pref_bloodTest_titles">
        <item>mmol/L</item>
        <item>mg/dL</item>
    </string-array>
    <string-array name="pref_bloodTest_list_values">
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_carbohydrate_measurement_unit">Preferred Carbohydrate measurement unit</string>
    <string-array name="pref_carb_unit_list_titles">
        <item>Gram</item>
        <item>Bread units (12g)</item>
        <item>Exchange(10g)</item>
        <item>Exchange(15g)</item>
    </string-array>
    <string-array name="pref_carb_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
