<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_exercise_time"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_exercise_time" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_bloodTest_titles"
        android:entryValues="@array/pref_bloodTest_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_blood_test_unit_title" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_carb_unit_list_titles"
        android:entryValues="@array/pref_carb_list_values"
        android:key="carb_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_carbohydrate_measurement_unit"  >


    </ListPreference>


</PreferenceScreen>
