<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1"
    tools:context=".Login">


    <TableRow android:padding="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/loginForm"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>
<TableRow>

    <TextView
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:text="@string/email"
        android:textColor="#fff"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginRight="10dp"
        android:hint="@string/email"
        android:padding="5dp"
        />

</TableRow>

<TableRow>

    <TextView
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="#fff"
        android:textSize="16sp" />



    <EditText
        android:id="@+id/pass"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:padding="5dp"
        android:inputType="textPassword" />



</TableRow>

    <TableRow android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button2"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="Login" />



    </TableRow>

</TableLayout>